k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-strip
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /demo-app
