k8s/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: master-1
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - "--entrypoints.web.address=:80"
          - "--entrypoints.websecure.address=:443"
          - "--providers.kubernetesingress=true"
          - "--providers.kubernetesingress.ingressclass=traefik"
          - "--api.dashboard=true"
          - "--ping=true"
          - "--log.level=INFO"
        ports:
          - name: web
            containerPort: 80
          - name: websecure
            containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websecure
      port: 443
      targetPort: 443
      protocol: TCP
