k8s/service-metabase.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: default
spec:
  selector:
    app: metabase
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
