k8s/ingress-metabase.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik
  rules:
  - host: metabase.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase
            port:
              number: 3000
